# BEP-Multiple-face-detection-and-tracking-under-occlusion

./: CMakeLists.txt  LICENSE  README.md
ROS_implementation/: package.xml
ROS_implementation/scripts/: Image_to_world_evidence.py  geometry_to_world_evidence.py
ROS_implementation/srv/: AddTwoInts2.srv  AddTwoInts3.srv
srv/: Geometry_msgs_to_world_evidence.srv
